<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="de.psekochbuch.exzellenzkoch.userinterfacelayer.viewmodel.RegistrateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrate"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/email_address"
            android:textSize="25sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@+id/textView26"
            tools:layout_editor_absoluteX="-16dp" />

        <EditText
            android:id="@+id/emailEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"

            android:hint="@string/email_example"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.email}"

            android:textSize="25sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@+id/textView27"
            tools:layout_editor_absoluteX="-29dp" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/optional_user_id"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@+id/emailEditTxt"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/userIdEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_id"
            android:inputType="textPersonName"
            android:text="@{viewModel.userId}"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@+id/textView22"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            android:text="@string/password"
            android:textSize="25sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@+id/userIdEditTxt"
            tools:layout_editor_absoluteX="-51dp" />

        <EditText
            android:id="@+id/editText11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@{viewModel.password}"
            app:layout_constraintTop_toBottomOf="@+id/textView29"

            tools:layout_editor_absoluteX="-27dp" />

        <Button
            android:id="@+id/button15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="@{() -> viewModel.registrateOnClick()}"
            android:text="@string/registrate"
            app:layout_constraintTop_toBottomOf="@+id/editText11"
            tools:layout_editor_absoluteX="-16dp" />

        <ProgressBar
            android:id="@+id/registrateProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.progressBarVisibility ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="-16dp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
